--- a/Pages/burger_bs.html
+++ b/Pages/burger_bs.html
@@ -40,17 +40,18 @@
         </div>
       </div>
 </header>
-<div class="conteiner.fluid text-center">
+<div class="conteiner.fluid px-3">
+<div class="row row-cols-1 px-3 mb-3 text-center">
 <h1 class="nuestras"> NUESTRAS <span class="burgers" > BURGERS</span> </h1>
 </div>
-
-<div class="row row-cols-1 px-4 row-cols-md-2 g-4">
+</div>
+<div class="row row-cols-1 px-4 row-cols-md-2 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4">
   <div class="col ">
     <div class="card">
       <img src="../imgs/autotriplechica.jpg" class="card-img-top" alt="autotriple">
       <div class="card-body">
         <h5 class="card-title text-center">AUTORRETRATO</h5>
-        <p class="card-text text-center mb-4"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <p class="card-text text-center mb-4 mt-3 texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Pan clásico
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
