--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                 <a class="nav__link" href= "index.html">INICIO</a>
                             </li>
                             <li class="nav_item">
-                                 <a class="nav__link" href= "Pages/burgers_grid.html">BURGERS</a>
+                                 <a class="nav__link" href= "Pages/burger_bs.html">BURGERS</a>
                              </li>
                             <li class="nav_item">
                                  <a class="nav__link" href= "Pages/birras.html">CERVEZAS</a>
