no me toma el cambio de la nav

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                  <a class="nav__link" href= "Pages/burger_bs.html">BURGERS</a>
                              </li>
                             <li class="nav_item">
-                                 <a class="nav__link" href= "Pages/birras.html">CERVEZAS</a>
+                                 <a class="nav__link" href= "xxxx">CERVEZAS</a>
                             </li>
                             <li class="nav_item"> 
                                 <a class="nav__link" href= "Pages/Nosotros.html">NOSOTROS</a>
