--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <div class="botonesBajos">
         <div class="Superior">
             <div class="boton_inferior BotonBurger">                   
-                <a href="./Pages/burgers_grid.html" ><img class="Imagen_menu_bajo" src="imgs/MENUBURGERNUEVO.jpg" alt="burgers"></a>
+                <a href="./Pages/burger_bs.html" ><img class="Imagen_menu_bajo" src="imgs/MENUBURGERNUEVO.jpg" alt="burgers"></a>
             </div>
             <div class="boton_inferior BotonPapas">                   
-                <a href="./Pages/birras.html" ><img class="Imagen_menu_bajo" src="imgs/BIRRASMENUNUEVO.jpg" alt="birras"></a>
+                <a href="./Pages/burger_bs.html" ><img class="Imagen_menu_bajo" src="imgs/BIRRASMENUNUEVO.jpg" alt="birras"></a>
             </div>
         </div>
         <div class="inferior">
