--- a/index copy.html
+++ b/index copy.html
@@ -22,10 +22,10 @@
                                 <a class="nav__link" href= "index.html">INICIO</a>
                             </li>
                             <li class="nav_item">
-                                 <a class="nav__link" href= "Pages/burgers_grid.html">BURGERS</a>
+                                 <a class="nav__link" href= "Pages/burger_bs.html">BURGERS</a>
                              </li>
                             <li class="nav_item">
-                                 <a class="nav__link" href= "Pages/birras.html">CERVEZAS</a>
+                                 <a class="nav__link" href= "Pages/burger_bs.html">CERVEZAS</a>
                             </li>
                             <li class="nav_item"> 
                                 <a class="nav__link" href= "Pages/Nosotros.html">NOSOTROS</a>
