personalizando las tarjetas

--- a/Pages/burger_bs.html
+++ b/Pages/burger_bs.html
@@ -45,13 +45,13 @@
 <h1 class="nuestras"> NUESTRAS <span class="burgers" > BURGERS</span> </h1>
 </div>
 </div>
-<div class="row row-cols-1 px-4 row-cols-md-2 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4">
-  <div class="col ">
-    <div class="card">
+<div class=" row row-cols-1 px-4 row-cols-md-2 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4 ">
+  <div class="col  ">
+    <div class="card bg-dark border border-dark-subtle ">
       <img src="../imgs/autotriplechica.jpg" class="card-img-top" alt="autotriple">
-      <div class="card-body">
-        <h5 class="card-title text-center">AUTORRETRATO</h5>
-        <p class="card-text text-center mb-4 mt-3 texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+      <div class="card-body ">
+        <h5 class="card-title text-center texto-web">AUTORRETRATO</h5>
+        <p class="card-text text-center mb-0 mt-1 texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Pan clásico
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
@@ -61,26 +61,19 @@
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Queso cheddar</p>
       </div>
-      <div class="btn-group d-flex" role="group" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio1">SIMPLE</label>
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio2">DOBLE</label>
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio3">TRIPLE</label>
-    </div>
-    <div class="container text-center">
+
+    <div class="container text-center d-flex align-items-center pb-3 justify-content-center">
         <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
-        <label class="form-check-label mt-4 " for="firstCheckbox">AGREGAR AL PEDIDO</label>
+        <label class="form-check-label mt-4 texto-web " for="firstCheckbox">AGREGAR AL PEDIDO</label>
     </div>
     </div>
   </div>
   <div class="col">
-    <div class="card">
+    <div class="card bg-dark border border-dark-subtle ">
       <img src="../imgs/Vangoghchica.jpg" class="card-img-top" alt="Vangogh">
       <div class="card-body">
-        <h5 class="card-title text-center">VANGOGH</h5>
-        <p class="card-text text-center "> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <h5 class="card-title text-center texto-web">VANGOGH</h5>
+        <p class="card-text text-center texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Pan clásico
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
@@ -102,26 +95,19 @@
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Mostaza </p>
       </div>
-      <div class="btn-group d-flex" role="group1" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio1">SIMPLE</label>
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio2">DOBLE</label>
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio6" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio3">TRIPLE</label>
-    </div>
-    <div class="container text-center">
+
+    <div class="container text-center d-flex align-items-center justify-content-center pb-3">
         <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
-        <label class="form-check-label mt-4 " for="firstCheckbox">AGREGAR AL PEDIDO</label>
+        <label class="form-check-label mt-4 texto-web" for="firstCheckbox">AGREGAR AL PEDIDO</label>
     </div>
     </div>
   </div>
   <div class="col">
-    <div class="card">
+    <div class="card bg-dark border border-dark-subtle ">
       <img src="../imgs/girasoleschica.jpg" class="card-img-top" alt="girasoles">
       <div class="card-body">
-        <h5 class="card-title text-center">GIRASOLES</h5>
-        <p class="card-text text-center"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <h5 class="card-title text-center texto-web">GIRASOLES</h5>
+        <p class="card-text text-center texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Pan clásico
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
@@ -139,27 +125,20 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Mostaneza</p>
-        <div class="btn-group d-flex" role="group" aria-label="Basic radio toggle button group">
-          <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-          <label class="btn btn-outline-seconday btn-sm" for="btnradio1">SIMPLE</label>
-          <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-          <label class="btn btn-outline-seconday btn-sm" for="btnradio2">DOBLE</label>
-          <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-          <label class="btn btn-outline-seconday btn-sm" for="btnradio3">TRIPLE</label>
-      </div>
-      <div class="container text-center">
+
+      <div class="container text-center d-flex align-items-center justify-content-center pb-3">
           <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
-          <label class="form-check-label mt-4 " for="firstCheckbox">AGREGAR AL PEDIDO</label>
+          <label class="form-check-label mt-4 texto-web " for="firstCheckbox">AGREGAR AL PEDIDO</label>
       </div>
       </div>
     </div>
   </div>
   <div class="col">
-    <div class="card">
+    <div class="card bg-dark border border-dark-subtle ">
       <img src="../imgs/RaicesChica.jpg" class="card-img-top" alt="Raices">
       <div class="card-body">
-        <h5 class="card-title text-center">RAÍCES</h5>
-        <p class="card-text text-center"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <h5 class="card-title text-center texto-web">RAÍCES</h5>
+        <p class="card-text text-center texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Pan clásico
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
@@ -177,19 +156,14 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
           <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
         </svg>Salsa mil islas</p>
-      </div>
-      <div class="btn-group d-flex" role="group" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio1">SIMPLE</label>
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio2">DOBLE</label>
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-        <label class="btn btn-outline-seconday btn-sm" for="btnradio3">TRIPLE</label>
+
     </div>
-    <div class="container text-center">
+    <div class="container text-center d-flex align-items-center justify-content-center pb-3">
         <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
-        <label class="form-check-label mt-4 " for="firstCheckbox">AGREGAR AL PEDIDO</label>
+        <label class="form-check-label mt-4 texto-web " for="firstCheckbox">AGREGAR AL PEDIDO</label>
     </div>
+  </div>
+
     </div>
   </div>
 </div>
