--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="./Pages/burger_bs.html" ><img class="Imagen_menu_bajo" src="imgs/MENUBURGERNUEVO.jpg" alt="burgers"></a>
             </div>
             <div class="boton_inferior BotonPapas">                   
-                <a href="./Pages/burger_bs.html" ><img class="Imagen_menu_bajo" src="imgs/BIRRASMENUNUEVO.jpg" alt="birras"></a>
+                <a href="./Pages/.html" ><img class="Imagen_menu_bajo" src="imgs/BIRRASMENUNUEVO.jpg" alt="birras"></a>
             </div>
         </div>
         <div class="inferior">
