--- a/Pages/burger_bs.html
+++ b/Pages/burger_bs.html
@@ -40,14 +40,13 @@
         </div>
       </div>
 </header>
-<div class="conteiner.fluid px-3">
-<div class="row row-cols-1 px-3 mb-3 text-center">
+<div class="conteiner.fluid">
+<div class="row row-cols-1 px-3 m-3 0 3 0 text-center">
 <h1 class=" display-1 nuestras"> NUESTRAS <span class=" burgers" > BURGERS</span> </h1>
 </div>
-</div>
 <div class=" row row-cols-1 px-4 row-cols-md-2 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4 ">
-  <div class="col  ">
-    <div class="card fondo_auto border border-dark-subtle ">
+  <div class="col  "> <!-- burger 1 -->
+    <div class="card fondo_auto border border-dark">
       <img src="../imgs/autotriplechica.jpg" class="card-img-top" alt="autotriple">
       <div class="card-body ">
         <h5 class="card-title text-center texto-web">AUTORRETRATO</h5>
@@ -69,8 +68,8 @@
   </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card fondo_vangogh border border-dark-subtle ">
+  <div class="col"> <!-- burger 2 -->
+    <div class="card fondo_vangogh border border border-dark ">
       <img src="../imgs/Vangoghchica.jpg" class="card-img-top" alt="Vangogh">
       <div class="card-body">
         <h5 class="card-title text-center texto-web">VANGOGH</h5>
@@ -104,8 +103,8 @@
   </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card fondo_girasoles border border-dark-subtle ">
+  <div class="col"> <!-- burger 3 -->
+    <div class="card fondo_girasoles border border-dark ">
       <img src="../imgs/girasoleschica.jpg" class="card-img-top" alt="girasoles">
       <div class="card-body">
         <h5 class="card-title text-center texto-web">GIRASOLES</h5>
@@ -135,8 +134,8 @@
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card fondo_raices border border-dark-subtle ">
+  <div class="col"> <!-- burger 4 -->
+    <div class="card fondo_raices border border border-dark ">
       <img src="../imgs/RaicesChica.jpg" class="card-img-top" alt="Raices">
       <div class="card-body">
         <h5 class="card-title text-center texto-web">RAÍCES</h5>
@@ -168,8 +167,8 @@
   </div>
 
     </div>
-    <div class="col">
-      <div class="card fondo_terraza border border-dark-subtle ">
+  <div class="col"> <!-- burger 5 -->
+      <div class="card fondo_terraza border border border-dark ">
         <img src="../imgs/terrazachica.jpg" class="card-img-top" alt="Terraza">
         <div class="card-body">
           <h5 class="card-title text-center texto-web">TERRAZA</h5>
@@ -204,8 +203,8 @@
     </div>
   
       </div>
-      <div class="col">
-        <div class="card fondo_cuervos border border-dark-subtle ">
+  <div class="col"> <!-- burger 6 -->
+        <div class="card fondo_cuervos border border border-dark ">
           <img src="../imgs/CuervosChica.jpg" class="card-img-top" alt="Cuervos">
           <div class="card-body">
             <h5 class="card-title text-center texto-web">CUERVOS</h5>
@@ -237,8 +236,8 @@
       </div>
     
         </div>
-        <div class="col">
-          <div class="card fondo_viñedo border border-dark-subtle ">
+  <div class="col"> <!-- burger 7 -->
+          <div class="card fondo_viñedo border border border-dark ">
             <img src="../imgs/viñedochica.jpg" class="card-img-top" alt="viñedo">
             <div class="card-body">
               <h5 class="card-title text-center texto-web">VIÑEDO ROJO</h5>
@@ -270,8 +269,8 @@
         </div>
       
           </div>
-          <div class="col">
-            <div class="card fondo_vincent border border-dark-subtle ">
+  <div class="col"> <!-- burger 8 -->
+            <div class="card fondo_vincent border border border-dark ">
               <img src="../imgs/vincentchica.jpg" class="card-img-top" alt="vincent">
               <div class="card-body">
                 <h5 class="card-title text-center texto-web">VINCENT</h5>
@@ -308,7 +307,62 @@
             </div>
   </div>
 </div>
+<div class="conteiner.fluid">
+  <div class="row row-cols-1  mt-5 mb-5 text-center">
+  <h1 class=" display-1 nuestras"> NUESTROS <span class=" burgers" > SANGUCHES</span> </h1>
+  </div>
+</div>
+<div class=" row row-cols-1 px-4 row-cols-md-2 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4 justify-content-center ">
+<div class="col  "> <!-- sangu 1 -->
+  <div class="card fondo_auto border border-dark">
+    <img src="../imgs/sangu_de_pollo.jpg" class="card-img-top" alt="Sangudepollo">
+    <div class="card-body ">
+      <h5 class="card-title text-center texto-web">SANDIWCH DE POLLO</h5>
+      <p class="card-text text-center texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Pan clásico
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Cubos de pollo grillado
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Cheddar</p>
+   
 
+  <div class="container text-center d-flex align-items-center pb-3 justify-content-center">
+      <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
+      <label class="form-check-label mt-4 texto-web " for="firstCheckbox">AGREGAR AL PEDIDO</label>
+  </div>
+</div>
+  </div>
+</div>
+<div class="col"> <!-- sangu 2 -->
+  <div class="card fondo_girasoles border border border-dark ">
+    <img src="../imgs/Philly_steak.jpg" class="card-img-top" alt="Philly">
+    <div class="card-body">
+      <h5 class="card-title text-center texto-web">PHILLY STEAK</h5>
+      <p class="card-text text-center texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Pan clásico
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Tiras de carne
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Cheddar 
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Cebolla grillada</p>
+   
+
+  <div class="container text-center d-flex align-items-center justify-content-center pb-3">
+      <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
+      <label class="form-check-label mt-4 texto-web" for="firstCheckbox">AGREGAR AL PEDIDO</label>
+  </div>
+</div>
+  </div>
+</div>
+</div>
 
 
 
