toqueteando las burgers

--- a/Pages/burger_bs.html
+++ b/Pages/burger_bs.html
@@ -12,15 +12,15 @@
     <link rel="icon" href="imgs/logo_favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="imgs/logo_favicon.png" type="image/x-icon">
  
-    <title>BURGERS | Vangogh</title>
+    <title> BURGERS | Vangogh</title>
 </head>
 <body>
   <header>
     <nav class="navbar fixed-top  navbar-expand-lg navbar-expand-md bg-dark p-0 ">
-      <div class="container-fluid  ">
-      
+      <div class="container-fluid">
+        <a class="navbar-brand texto-web texto-titulo-nav d-md-none d-lg-none" href="#">VANGOGH</a>
         <button class="navbar-toggler custom-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon "></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse  justify-content-center align-items-center" id="navbarNav">
           <ul class="navbar-nav ">
@@ -31,6 +31,9 @@
               <a class="nav-link texto-web" href="#"><h4>BURGERS</h4></a>
             </li>
             <li class="nav-item ">
+              <a class="nav-link texto-web" href="#"><h4>BIRRAS</h4></a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link texto-web" href="#"><h4>CONTACTO</h4></a>
             </li>
             <li class="nav-item">
@@ -43,11 +46,11 @@
     </nav>
       </div>
 </header>
-<div class="conteiner.fluid"> <!-- contenedor principal -->
-<div class="row row-cols-1  mt-5  text-center"> <!-- titulo burger -->
-<h1 class=" display-1 m-0 nuestras "> NUESTRAS <span class="  burgers " > BURGERS</span> </h1>
+<div class="conteiner.fluid  "> <!-- contenedor principal -->
+<div class="row row-cols-1 mt-5  text-center"> <!-- titulo burger -->
+<h1 class=" display-1 mt-5 nuestras "> NUESTRAS <span class="  burgers " > BURGERS</span> </h1>
 </div>
-<div class=" row row-cols-1 px-4 row-cols-md-2 m-0 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4  ">
+<div class=" row row-cols-1 px-4 row-cols-md-2 m-0 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4 ">
   <div class="col  "> <!-- burger 1 -->
     <div class="card fondo_auto border border-dark">
       <img src="../imgs/autotriplechica.jpg" class="card-img-top" alt="autotriple">
@@ -371,7 +374,7 @@
 </div>
 <div class=" row row-cols-1 px-4 row-cols-md-2 m-0 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4 justify-content-center ">
 <div class="col  "> <!-- papas  1 -->
-  <div class="card fondo_auto border border-dark">
+  <div class="card fondo_viñedo border border-dark">
     <img src="../imgs/papas_vangogh.jpg" class="card-img-top" alt="Papasvg">
     <div class="card-body ">
       <h5 class="card-title text-center texto-web">PAPAS VANGOGH</h5>
@@ -398,7 +401,7 @@
   </div>
 </div>
 <div class="col"> <!-- papas  2 -->
-  <div class="card fondo_girasoles border border border-dark ">
+  <div class="card fondo_terraza border border border-dark ">
     <img src="../imgs/papas_cheddar.jpg" class="card-img-top" alt="Papascheddar">
     <div class="card-body">
       <h5 class="card-title text-center texto-web">PAPAS CHEDDAR</h5>
