armado portada y nuevo index

--- a/Pages/burger_bs.html
+++ b/Pages/burger_bs.html
@@ -430,12 +430,10 @@
 <div class="container.fluid mt-4">
 
   <footer class="text-white text-center text-lg-start bg-dark" >
-    <!-- Grid container -->
     <div class="container p-1 ">
-      <!--Grid row-->
       <div class="row pt-2 ">
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-12 mb-4 mb-md-0 ">
+        <!--CONTACTOS-->
+        <div class="col-lg-4 col-md-12 mb-4 ">
           <div class="mt-4 d-flex flex-row align-items-start justify-content-center sm-d-flex -flex-row align-items-start justify-content-center">
             <ul class="list-inline pt-1" >
               <h3 class="texto-web-footer ">CONTAC</h3>
@@ -458,8 +456,7 @@
             </ul>
           </div>
         </div>
-        <!--Grid column-->
-        <!--Grid column-->
+        <!-- FIRMA -->
         <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
           <ul class="list-unstyled texto-web" style="text-align: center;">
             <a class="navbar-brand texto-web" href="#"> <h2> VANGOGH</h2></a>
@@ -467,9 +464,7 @@
             <li>La Plata, Buenos Aires, Argentina</li>
           </ul>
         </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
+        <!-- horarios -->
         <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase mb-1 texto-web text-center">HORARIOS</h5>
 
