--- a/Pages/Nosotros.html
+++ b/Pages/Nosotros.html
@@ -12,30 +12,35 @@
 </head>
 <body>
         <header>
-            <div class="header">
-                <nav class="nav">
-                 <ul class="nav__list">
-                    <li class="nav_item"> 
-                        <a class="nav__link" href= "../Index.html">INICIO</a>
-                    </li>
-                    <li class="nav_item">
-                        <a class="nav__link" href= "burgers_grid.html">BURGERS</a>
-                    </li>
-                    <li class="nav_item">
-                         <a class="nav__link" href= "./birras.html">CERVEZAS</a>
-                    </li>
-                    <li class="nav_item"> 
-                        <a class="nav__link" href= "./Nosotros.html">NOSOTROS</a>
-                    </li>
-                    <li class="nav_item"> 
-                        <a class="nav__link" href= "./Contacto.html">CONTACTO</a>
-                    </li>
-                    </li>
-                           
-                 </ul>
-                    </nav>
+            <nav class="navbar fixed-top  navbar-expand-lg navbar-expand-md bg-dark p-0 ">
+                <div class="container-fluid">
+                  <a class="navbar-brand texto-web texto-titulo-nav d-md-none d-lg-none" href="#">VANGOGH</a>
+                  <button class="navbar-toggler custom-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse  justify-content-center align-items-center" id="navbarNav">
+                    <ul class="navbar-nav ">
+                      <li class="nav-item ">
+                        <a class="nav-link texto-web" aria-current="page" href="index.html"><h4>INICIO</h4></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link texto-web" href="./burger_bs.html"><h4>BURGERS</h4></a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link texto-web" href="#"><h4>BIRRAS</h4></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link texto-web" href="./Contacto.html"><h4>CONTACTO</h4></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link texto-web" href="./Nosotros.html"><h4>NOSOTROS</h4></a>
+                        
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </div>
+              </nav>
+                </div>
         </header>
 
         <main>
