--- a/Pages/burger_bs.html
+++ b/Pages/burger_bs.html
@@ -25,19 +25,19 @@
         <div class="collapse navbar-collapse  justify-content-center align-items-center" id="navbarNav">
           <ul class="navbar-nav ">
             <li class="nav-item ">
-              <a class="nav-link texto-web" aria-current="page" href="#"><h4>INICIO</h4></a>
+              <a class="nav-link texto-web" aria-current="page" href="/index.html"><h4>INICIO</h4></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link texto-web" href="#"><h4>BURGERS</h4></a>
+              <a class="nav-link texto-web" href="./burger_bs.html"><h4>BURGERS</h4></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link texto-web" href="#"><h4>BIRRAS</h4></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link texto-web" href="#"><h4>CONTACTO</h4></a>
+              <a class="nav-link texto-web" href="./Contacto.html"><h4>CONTACTO</h4></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link texto-web" href="#"><h4>NOSOTROS</h4></a>
+              <a class="nav-link texto-web" href="./Nosotros.html"><h4>NOSOTROS</h4></a>
               
             </li>
           </ul>
