--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -91,13 +91,15 @@
             </table>
         
           </div>
+
+          
         <div class="row container-fluid">
             <div class="container-fluid">
                 <h2 class="texto-web text-center display-7">RECIBÍ TODAS NUESTRAS PROMOS ESPECIALES</h2>
             </div>
             <div class="mx-auto py-1 d-flex  flex-column  flex-md-row  g-5 my-0" style="width: auto;">
                 <input type="text" class="form-control mx-2 " placeholder="Email" aria-label="Email">
-                <input type="text" class="form-control" placeholder="Whatsapp" aria-label="Whatsapp">
+                <input type="text" class="form-control mx-2" placeholder="Whatsapp" aria-label="Whatsapp">
             </div>
             <div class="ROW text-center py-3">
                 <button type="button " class="btn btn-outline-light btn-lg ">SUSCRIBIRSE</button>
