--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -30,8 +30,8 @@
                         <a class="nav-link texto-web" href="./burger_bs.html"><h4>BURGERS</h4></a>
                       </li>
                       <li class="nav-item ">
-                        <a class="nav-link texto-web" href="#"><h4>BIRRAS</h4></a>
-                      </li>
+                      <a class="nav-link texto-web" href="./birras.html"><h4>BIRRAS</h4></a>
+                        </li>
                       <li class="nav-item">
                         <a class="nav-link texto-web" href="./Contacto.html"><h4>CONTACTO</h4></a>
                       </li>
@@ -112,7 +112,7 @@
 
     <footer class="text-white text-center text-lg-start bg-dark" >
       <div class="container p-1 ">
-        <div class="row pt-2 ">
+        <div class="row pt-2 mt-10 ">
           <!--CONTACTOS-->
           <div class="col-lg-4 col-md-12 mb-4 ">
             <div class="mt-4 d-flex flex-row align-items-start justify-content-center sm-d-flex -flex-row align-items-start justify-content-center">
