--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link texto-web" href="./Pages/burger_bs.html"><h4>BURGERS</h4></a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link texto-web" href="./"><h4>BIRRAS</h4></a>
+              <a class="nav-link texto-web" href="./birras.html"><h4>BIRRAS</h4></a>
             </li>
             <li class="nav-item">
               <a class="nav-link texto-web" href="./Pages/Contacto.html"><h4>CONTACTO</h4></a>
@@ -103,7 +103,6 @@
                       </div>   
     
                     </div>
-   
            
     <div class="container.fluid mt-4">
 
